--- a/css/main.css
+++ b/css/main.css
@@ -167,12 +167,13 @@ h4 {
     border-radius: 50%;
 	max-width:80%;
 	max-height:80%;
-	margin-left:auto;
-	margin-right:auto;
+	display: block;
+    margin: 0 auto;
+
 }
 
 .header-container {
-	background: url("file:///home/catherio/Projects/website/catherio-site/pics/self_tree_2_tinycrop.jpg");
+	background: url("../pics/self_tree_2_tinycrop.jpg");
 	background-size: cover;	
 }
 
